<resources>
    <string name="app_name">STRAP USER UI</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="notification">notification</string>
    <string name="trip_code">TRIP CODE</string>
    <string name="submit_code">Submit Code</string>
    <string name="enter_trip_code">Enter Trip Code</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="quantity">QUANTITY</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="start_trip">Start Trip</string>
    <string name="stop_trip">Stop Trip</string>
    <string name="pause_trip">Pause Trip</string>
    <string name="trip_over">You have completed your trip</string>
    <string name="title_activity_trip_tracking">Map</string>
</resources>
